<resources>
    <string name="app_name">AyoPerbaiki!</string>
    <string name="detail_bencana">Detail Bencana</string>
    <string name="waktu_kejadian">Waktu Kejadian</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lokasi_kejadian">Lokasi Kejadian</string>
    <string name="feedback">Feedback :</string>
    <string name="feedback_if_false">Belum ada tindak lanjut</string>
    <string name="error_msg">Gagal mengambil data, pastikan koneksi internet anda tidak bermasalah</string>
    <string name="required_text_field">*wajib diisi</string>

    <string name="no_return_address">Tidak ada data untuk koordinat ini</string>
    <string name="search_view_hint">Ketik lokasi, tempat...</string>
    <string name="form_title">Formulir Kerusakan Infrastruktur</string>
    <string name="back">Back</string>
    <string name="form_caution">Mohon mengisi form kerusakan bencana berikut ini dengan data yang valid dan benar.</string>
    <string name="lokasi_bencana">Lokasi Bencana</string>
    <string name="garis_lintang">Garis Lintang</string>
    <string name="garis_bujur">Garis Bujur</string>
    <string name="text_warning_lokasi_bencana">Data lokasi bencana tidak dapat diubah pada halaman ini. Jika ada ingin melakukan perubahan anda dapat kembali ke halaman maps untuk memilih lokasi yang baru.</string>
    <string name="buat_laporan">Buat Laporan</string>
    <string name="alamat">Alamat</string>
    <string name="kota_kabupaten">Kota/Kabupaten</string>
    <string name="provinsi">Provinsi</string>
    <string name="star">**</string>
    <string name="detail_kerusakan_bencana">Detail Kerusakan Bencana</string>
    <string name="kategori_bencana">Kategori Bencana</string>
    <string name="tipe_kerusakan_infrastruktur">Tipe Kerusakan Infrastruktur</string>
    <string name="tambahkan_bukti_gambar_kerusakan">Tambahkan bukti-bukti gambar kerusakan:</string>
    <string name="image_not_captured">Gambar tidak tertangkap</string>
    <string name="failed_save_image">Batal mengambil gambar.</string>
    <string name="permission_storage_request">Aplikasi membutuhkan izin akses penyimpanan eksternal untuk menyimpan gambar</string>
    <string name="permission_camera_request">Aplikasi membutuhkan kamera dan storage untuk mengambil gambar kerusakan bencana</string>
    <string name="blur_image_msg">Gambar kurang jelas. Mohon ambil gambar kembali!</string>
    <string name="jenis_kerusakan">Jenis Kerusakan :</string>
    <string name="keterangan">Keterangan :</string>
    <string name="mencari_informasi_koordinat">Mencari informasi koordinat</string>
    <string name="bagaimana_membuat_laporan">Bagaimana membuat laporan ?</string>
    <string name="point_1">Tandai lokasi tempat bencana terjadi. Anda dapat melakukannya dengan menekan lama pada maps atau menggunakan fitur pencarian.</string>
    <string name="point_2">Setelah menandai koordinat, aplikasi terlebih dahulu akan mengambil informasi alamat dari koordinat yang anda tandai. Jika Berhasil, tombol \'Buat Laporan\' akan muncul pada pojok kanan bawah.</string>
    <string name="point_3">Lengkapi form pengisian, pastikan anda mengisi data yang diperlukan menggunakan informasi yang benar. Sertakan juga bukti visual seperti gambar kerusakan bencana.</string>
    <string name="point_4">Jika telah selesai, tekan tombol \'Buat Laporan\' dan tunggu hingga proses selesai. Anda akan langsung diarahkan kembali ke halaman maps dan mendapatkan pembaharuan data laporan.</string>
    <string name="title_cancel">Batalkan Laporan</string>
    <string name="message_cancel">Apakah anda yakin ingin membatalkan laporan kerusakan?</string>
    <string name="title_submit">Submit Laporan Kerusakan</string>
    <string name="message_submit">Data formulir yang anda isikan akan kami simpan dan akan segera ditindak lanjuti. Apakah formulir telah diisi dengan benar?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="uploading_images">Mengunggah Gambar</string>
    <string name="upload_loading">Mohon menunggu...</string>
    <string name="uploading_report">Mengunggah Laporan Kerusakan</string>
    <string name="success_uploaded">Berhasil diunggah</string>
    <string name="failed_upload">Gagal diunggah</string>
    <string name="message_ok">OKE</string>

</resources>