<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:paddingVertical="12dp"
        android:background="@color/ss_bottom"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/bagaimana_membuat_laporan"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#444"
                    android:textSize="15sp"
                    android:text="1. "/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#444"
                    android:textSize="15sp"
                    android:justificationMode="inter_word"
                    android:layout_weight="1"
                    android:paddingStart="4dp"
                    android:paddingEnd="0dp"
                    android:text="@string/point_1"
                    tools:targetApi="o" />

            </TableRow>

            <TableRow
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#444"
                    android:textSize="15sp"
                    android:text="2. "/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#444"
                    android:textSize="15sp"
                    android:justificationMode="inter_word"
                    android:layout_weight="1"
                    android:paddingStart="4dp"
                    android:paddingEnd="0dp"
                    android:text="@string/point_2"
                    tools:targetApi="o" />

            </TableRow>

            <TableRow
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#444"
                    android:textSize="15sp"
                    android:text="3. "/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#444"
                    android:textSize="15sp"
                    android:justificationMode="inter_word"
                    android:layout_weight="1"
                    android:paddingStart="4dp"
                    android:paddingEnd="0dp"
                    android:text="@string/point_3"
                    tools:targetApi="o" />

            </TableRow>

            <TableRow
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#444"
                    android:textSize="15sp"
                    android:text="4. "/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#444"
                    android:textSize="15sp"
                    android:justificationMode="inter_word"
                    android:layout_weight="1"
                    android:paddingStart="4dp"
                    android:paddingEnd="0dp"
                    android:text="@string/point_4"
                    tools:targetApi="o" />

            </TableRow>

        </TableLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_close"
            android:layout_width="50dp"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="@android:color/holo_orange_dark"
            app:cardElevation="0dp"
            app:cardCornerRadius="25dp"
            android:layout_height="50dp">

            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:src="@drawable/ic_close_white"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>