<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectange_top_corner"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/top_line"
        android:layout_width="60dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/darker_gray"
        app:cardCornerRadius="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/detail_bencana"
        android:textColor="@color/font_header"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_line" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/image_disaster_type"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_banjir_tr"
        app:civ_border_color="@color/bg_gray"
        app:civ_border_width="4dp"
        app:civ_circle_color="@color/bg_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/image_disaster_type"
        app:layout_constraintStart_toEndOf="@+id/image_disaster_type"
        app:layout_constraintTop_toTopOf="@+id/image_disaster_type">

        <TextView
            android:id="@+id/tv_disaster_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/font_header"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="Banjir Bandang" />

        <TextView
            android:id="@+id/tv_disaster_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/font_gray"
            android:textSize="14.5sp"
            android:text="Cilandak, Jakarta" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_time_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_disaster_type"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/container_time"
            android:layout_marginEnd="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_time"
                app:civ_border_color="@color/bg_gray"
                app:civ_border_width="4dp"
                app:civ_circle_color="@color/bg_gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/waktu_kejadian"
                    android:textColor="@color/font_header"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_disaster_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:textColor="@color/font_gray"
                    android:textSize="13sp"
                    android:text="21 Mei, 2021, 20:15" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_location"
            android:layout_marginStart="4dp"
            android:layout_width="0dp"
            android:layout_weight="1.1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_location"
                app:civ_border_color="@color/bg_gray"
                app:civ_border_width="4dp"
                app:civ_circle_color="@color/bg_gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/lokasi_kejadian"
                    android:textColor="@color/font_header"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_disaster_latlng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:textColor="@color/font_gray"
                    android:textSize="13sp"
                    android:text="5.5089° LS, 122.0289° BT" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_disaster_doc"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/bg_gray"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_time_location">

        <ImageView
            android:id="@+id/image_disaster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_image"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_disaster_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/bg_gray"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cv_disaster_doc">

        <TextView
            android:id="@+id/tv_disaster_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:justificationMode="inter_word"
            android:text="@string/sample_text"
            tools:targetApi="o" />

    </androidx.cardview.widget.CardView>

<!--    <Button-->
<!--        android:id="@+id/btn_donasi"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingVertical="10dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:text="@string/donasi_sekarang"-->
<!--        android:backgroundTint="@color/btn_donasi"-->
<!--        android:textAllCaps="false"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/cv_disaster_doc"-->
<!--        app:layout_constraintStart_toStartOf="@+id/cv_disaster_doc"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/cv_disaster_desc"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>